done some changes, start to fix project