@@ -1,57 +1,82 @@
 package com.example.companyservice.service.impl;
 
+import com.example.companyservice.client.UserServiceClient;
 import com.example.companyservice.dto.CompanyDto;
-import com.example.companyservice.model.Company;
+import com.example.companyservice.mapper.CompanyMapper;
 import com.example.companyservice.repository.CompanyRepository;
 import com.example.companyservice.service.CompanyService;
+import com.example.userservice.dto.UserDto;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class CompanyServiceImpl implements CompanyService {
 
     private final CompanyRepository companyRepository;
+    private final CompanyMapper companyMapper;
+    private final UserServiceClient userServiceClient;
 
-    @Override
     public List<CompanyDto> getAllCompanies() {
-        return companyRepository.findAll().stream()
-                .map(this::convertToDto)
-                .collect(Collectors.toList());
+        List<CompanyDto> companies = companyRepository.findAll().stream()
+                .map(companyMapper::toDto)
+                .toList();
+        log.info("Found {} companies", companies.size());
+        return companies;
     }
 
-    @Override
-    public Optional<CompanyDto> getCompanyById(Long id) {
-        return companyRepository.findById(id)
-                .map(this::convertToDto);
+    public CompanyDto getCompanyById(Long id) {
+        CompanyDto company = companyRepository.findById(id)
+                .map(companyMapper::toDto)
+                .orElseThrow(() -> {
+                    log.warn("Company with id {} not found", id);
+                    return new RuntimeException("Company not found");
+                });
+        log.info("Company found: {}", company);
+        return company;
     }
 
-    @Override
-    public Optional<CompanyDto> getCompanyByName(String name) {
-        return companyRepository.findByName(name)
-                .map(this::convertToDto);
+    public CompanyDto getCompanyByName(String name) {
+        CompanyDto company = companyRepository.findByName(name)
+                .map(companyMapper::toDto)
+                .orElseThrow(() -> {
+                    log.warn("Company with name {} not found", name);
+                    return new RuntimeException("Company not found");
+                });
+        log.info("Company found: {}", company);
+        return company;
     }
 
-    @Override
+    @Transactional
     public CompanyDto saveCompany(CompanyDto companyDto) {
-        Company company = convertToEntity(companyDto);
-        Company savedCompany = companyRepository.save(company);
-        return convertToDto(savedCompany);
+        var company = companyMapper.toEntity(companyDto);
+        CompanyDto savedCompany = companyMapper.toDto(companyRepository.save(company));
+        log.info("Company created successfully: {}", savedCompany);
+        return savedCompany;
     }
 
-    private CompanyDto convertToDto(Company company) {
-        return new CompanyDto(company.getName(), company.getBudget(), company.getEmployees());
-    }
+    public CompanyDto getCompanyWithEmployees(Long companyId) {
+        CompanyDto company = companyRepository.findById(companyId)
+                .map(companyMapper::toDto)
+                .orElseThrow(() -> {
+                    log.warn("Company with id {} not found", companyId);
+                    return new RuntimeException("Company not found");
+                });
 
-    private Company convertToEntity(CompanyDto companyDto) {
-        return Company.builder()
-                .name(companyDto.getName())
-                .budget(companyDto.getBudget())
-                .employees(companyDto.getEmployees())
-                .build();
+        List<Long> employeeIds = company.getEmployeeIds();
+        log.info("Fetching employees for company {} with IDs: {}", companyId, employeeIds);
+
+        List<UserDto> employees = userServiceClient.getUsersByIds(employeeIds);
+        log.info("Fetched {} employees for company {}", employees.size(), companyId);
+
+        company.setEmployees(employees);
+
+        log.info("Company with employees: {}", company);
+        return company;
     }
 }
